--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="light_blue">#0088FF</color>
-    <color name="dark_blue">#0800FF</color>
+    <color name="dark_blue">#040087</color>
     <color name="yellow">#FFB700</color>
-    <color name="dark_yellow">#8A6C00</color>
+    <color name="dark_yellow">#6A5300</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#737373</color>
