Adds change confirmation and balance checking
Adds change confirmation and balance checking

--- a/app/src/main/res/layout/admin_options.xml
+++ b/app/src/main/res/layout/admin_options.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="800dp"
-    android:layout_height="700dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/grey">
 
     <TextView
-        android:id="@+id/optionsTitle"
+        android:id="@+id/changesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -28,7 +28,7 @@
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/optionsTitle"
+        app:layout_constraintTop_toBottomOf="@+id/checkBalanceButton"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -45,7 +45,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/buttonSetupDatabase"
+        android:id="@+id/confirmationButton"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
@@ -55,6 +55,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonEmptyDatabase"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/checkBalanceButton"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:text="Check balance"
+        android:textColor="@color/yellow"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/changesTitle"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
