--- a/app/src/main/res/layout/log.xml
+++ b/app/src/main/res/layout/log.xml
@@ -10,6 +10,7 @@
         android:id="@+id/logText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
