--- a/app/src/main/res/layout/create_user.xml
+++ b/app/src/main/res/layout/create_user.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/grey">
+    android:layout_width="750dp"
+    android:layout_height="650dp"
+    android:background="@color/grey"
+    tools:ignore="Autofill" >
 
     <TextView
         android:id="@+id/changesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="NEW USER"
+        android:layout_marginTop="30dp"
+        android:text="@string/create_user_header"
         android:textColor="@color/yellow"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,12 +21,12 @@
 
     <Button
         android:id="@+id/confirmationButton"
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="80dp"
         android:layout_marginBottom="30dp"
-        android:text="Confirm"
-        android:textColor="@color/yellow"
-        android:textSize="30sp"
+        android:text="@string/confirm"
+        android:textColor="@color/white"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,12 +36,12 @@
         android:id="@+id/firstNameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="80dp"
         android:ems="8"
-        android:hint="First Name"
+        android:hint="@string/first_name"
         android:inputType="textPersonName"
         android:textColor="@color/yellow"
+        android:textColorHint="@color/yellow"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/lastNameInput"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,11 +51,12 @@
         android:id="@+id/lastNameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="80dp"
         android:ems="8"
-        android:hint="Last Name"
+        android:hint="@string/last_name"
         android:inputType="textPersonName"
         android:textColor="@color/yellow"
+        android:textColorHint="@color/yellow"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,11 +66,12 @@
         android:id="@+id/pinCodeInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="80dp"
         android:ems="8"
-        android:hint="Pin Code"
+        android:hint="@string/pin_code"
         android:inputType="number"
         android:textColor="@color/yellow"
+        android:textColorHint="@color/yellow"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,77 +79,92 @@
 
     <RadioGroup
         android:id="@+id/groupSelect"
-        android:layout_width="210dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:background="@color/light_blue"
-        android:checkedButton="@id/other"
+        android:layout_marginEnd="80dp"
+        android:background="@color/blue"
+        android:checkedButton="@id/group7"
         android:isScrollContainer="true"
-        android:nestedScrollingEnabled="true"
         android:showDividers="middle|beginning|end"
         app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changesTitle">
 
         <RadioButton
-            android:id="@+id/kapoenen"
+            android:id="@+id/group1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kapoenen"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group1"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/welpen"
+            android:id="@+id/group2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welpen"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group2"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/jongverkenners"
+            android:id="@+id/group3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Jongverkenners"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group3"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/verkenners"
+            android:id="@+id/group4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Verkenners"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group4"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/jins"
+            android:id="@+id/group5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Jins"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group5"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/exLeaders"
+            android:id="@+id/group6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ex leaders"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/group6"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/other"
+            android:id="@+id/group7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Other"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/group7"
             android:textColor="@color/yellow"
             android:textSize="22sp"
             android:textStyle="bold" />
