--- a/app/src/main/res/layout/button_item.xml
+++ b/app/src/main/res/layout/button_item.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="2dp"
-        android:fontFamily="sans-serif"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:ignore="SpeakableTextPresentCheck" />
+        android:layout_width="230dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="sans-serif-light"
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
