--- a/app/src/main/res/layout/confirm_changes.xml
+++ b/app/src/main/res/layout/confirm_changes.xml
@@ -2,46 +2,50 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="400dp"
+    android:layout_height="500dp"
     android:background="@color/grey">
 
     <TextView
         android:id="@+id/changesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="CHANGES"
+        android:layout_marginTop="30dp"
+        android:text="@string/changes_title"
         android:textColor="@color/yellow"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/changesText"
+        android:layout_width="350dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/yellow"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        android:scrollbars="vertical"
+        android:scrollbarSize="20dp"
+        android:fadeScrollbars="false"
+        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/changesTitle" />
+
     <Button
-        android:id="@+id/confirmationButton"
-        android:layout_width="200dp"
+        android:id="@+id/confirmButton"
+        android:layout_width="210dp"
         android:layout_height="80dp"
         android:layout_marginBottom="30dp"
-        android:text="Confirm"
-        android:textColor="@color/yellow"
-        android:textSize="30sp"
+        android:text="@string/confirm"
+        android:textColor="@color/white"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/changesText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/yellow"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changesTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
