--- a/app/src/main/res/values-night-v21/themes.xml
+++ b/app/src/main/res/values-night-v21/themes.xml
@@ -1,5 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
     <style name="Theme.DrinkRegisterApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary color. -->
         <item name="colorPrimary">@color/dark_blue</item>
@@ -10,8 +11,7 @@
         <item name="colorSecondaryVariant">@color/yellow</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="lollipop">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
 </resources>
