--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Colors to be used in the program -->
     <color name="light_blue">#0088FF</color>
+    <color name="blue">#FC053493</color>
     <color name="dark_blue">#040087</color>
-    <color name="yellow">#FFB700</color>
-    <color name="dark_yellow">#6A5300</color>
+    <color name="yellow">#FFC800</color>
+    <color name="dark_yellow">#7A6000</color>
+    <color name="red">#FF0000</color>
+    <color name="grey">#696969</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#737373</color>
-    <color name="red">#FF0000</color>
+
+    <!-- Color for the icon -->
+    <color name="ic_launcher_background">#3D94DC</color>
 </resources>
