Adds option menu's for all users
Adds option menu's for all users

--- a/app/src/main/res/layout/pincode.xml
+++ b/app/src/main/res/layout/pincode.xml
@@ -16,6 +16,7 @@
         android:text="@string/pincode_header"
         android:textColor="@color/yellow"
         android:textSize="50sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
