--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="dark_blue">#040087</color>
     <color name="yellow">#FFC800</color>
     <color name="dark_yellow">#7A6000</color>
-    <color name="red">#FF0000</color>
+    <color name="red">#B60000</color>
     <color name="grey">#696969</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
