--- a/app/src/main/res/layout/edit_menu.xml
+++ b/app/src/main/res/layout/edit_menu.xml
@@ -6,11 +6,11 @@
     android:background="@color/grey">
 
     <TextView
-        android:id="@+id/optionsTitle"
+        android:id="@+id/editMenuTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/options_header"
+        android:text="@string/edit_menu_header"
         android:textColor="@color/yellow"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,52 +18,52 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/checkBalanceButton"
+        android:id="@+id/editBalanceButton"
         android:layout_width="300dp"
         android:layout_height="110dp"
         android:layout_marginTop="20dp"
-        android:text="@string/check_balance"
+        android:text="@string/edit_balance"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/optionsTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/editMenuTitle" />
 
     <Button
-        android:id="@+id/changePincodeButton"
+        android:id="@+id/editPincodeButton"
         android:layout_width="300dp"
         android:layout_height="110dp"
         android:layout_marginTop="20dp"
-        android:text="@string/change_pincode"
+        android:text="@string/edit_pincode"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBalanceButton" />
+        app:layout_constraintTop_toBottomOf="@+id/editBalanceButton" />
 
     <Button
-        android:id="@+id/createUserButton"
+        android:id="@+id/editGroupButton"
         android:layout_width="300dp"
         android:layout_height="110dp"
         android:layout_marginTop="20dp"
-        android:text="@string/create_user"
+        android:text="@string/edit_group"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changePincodeButton" />
+        app:layout_constraintTop_toBottomOf="@+id/editPincodeButton" />
 
     <Button
-        android:id="@+id/setupDatabaseButton"
+        android:id="@+id/deleteUserButton"
         android:layout_width="300dp"
         android:layout_height="110dp"
         android:layout_marginTop="20dp"
-        android:text="@string/setup_database"
+        android:text="@string/delete_user"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createUserButton" />
+        app:layout_constraintTop_toBottomOf="@+id/editGroupButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
