--- a/app/src/main/res/layout/mod_options.xml
+++ b/app/src/main/res/layout/mod_options.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="500dp"
-    android:layout_height="520dp"
+    android:layout_height="650dp"
     android:background="@color/grey">
 
     <TextView
@@ -52,6 +52,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePincodeButton" />
+
+    <Button
+        android:id="@+id/editUserButton"
+        android:layout_width="300dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/edit_user"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createUserButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
