--- a/app/src/main/res/layout/check_balance.xml
+++ b/app/src/main/res/layout/check_balance.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="700dp"
+    android:layout_width="650dp"
     android:layout_height="600dp"
     android:background="@color/blue">
 
@@ -31,12 +31,12 @@
         android:id="@+id/balanceHistory"
         android:layout_width="650dp"
         android:layout_height="370dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:scrollbarSize="10dp"
+        android:scrollbars="vertical"
         android:textColor="@color/yellow"
         android:textSize="35sp"
-        android:textAlignment="center"
-        android:scrollbars="vertical"
-        android:scrollbarSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/balanceTotal" />
